--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dedust/sdk": "^0.8.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/urbanist": "^5.0.20",
     "@orbs-network/ton-access": "^2.3.3",
     "@ton/core": "^0.56.3",
     "@ton/crypto": "^3.2.0",
